Limpieza de código y revisión informes

--- a/reports/certificado_report.xml
+++ b/reports/certificado_report.xml
@@ -8,18 +8,17 @@
     <field name="binding_model_id" ref="model_mantenprev_certificado"/>
     <field name="binding_type">report</field>
     <field name="binding_view_types">list,form</field>
-    <field name="print_report_name">'Ficha certificado - %s' % (object.code)</field>
+    <field name="print_report_name">'Ficha certificado - %s' % (object.name)</field>
   </record>
  
     
   <template id="mantenprev.report_certificado">
     <t t-call="web.html_container">
-      <!-- por si se mandará a imprimir varios certificados -->
+      <!-- por si se mandara a imprimir varios certificados -->
       <t t-foreach="docs" t-as="record">
          <t t-call="web.external_layout">
           <div class="page">
             <h2>certificado</h2>
-            <p><span>Código:</span><t t-esc="record.code"/></p>
             <p><span>Número de referencia:</span><t t-esc="record.name"/></p>
             <p><span>Titular:</span><t t-esc="record.titular"/></p>
             <p><span>Resultado:</span><t t-esc="record.resultado"/></p>
